datatype refactoring: removed unused functionalities